# openrouter-desktop-dash

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: app.html  board.html  drawing.html  index.html  micropython.html
docs/assets/: style.css
src/: buttons.py  config.example.py  dash.py  keyring.py  main.py  net.py  openrouter.py  urequests.py  usage_view.py
tests/: conftest.py  test_dash.py  test_keyring.py  test_net.py  test_usage_view.py
