[project]
name = "openrouter-desktop-dash"
version = "0.1.0"
description = "A MicroPython example for the Adafruit ESP32-S3 Reverse TFT Feather (5691): a desktop dashboard that shows your OpenRouter API spend. Host-side dev env (stubs + pytest + mpremote workflow) for on-board code in src/."
readme = "README.md"
license = "MIT"
authors = [{ name = "Sam Keen" }]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "micropython-esp32-stubs>=1.28.0.post4",
    "pytest>=9.1.1",
]
